# python-sdk

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
examples/: 01_simple_agent.py  02_parallel_research.py  03_durable_pipeline.py  04_multi_agent_team.py  05_toolkit_streaming.py  06_streaming.py  07_otel_tracing.py  08_hitl_approval.py  09_multi_agent_handoff.py  10_ninetrix_context.py
examples/agentfile/: 01_load_single_agent.py  01_single_agent.yaml  02_load_two_agents.py  02_two_agents.yaml
src/ninetrix/: __init__.py  context.py  schema.py
src/ninetrix/_internals/: auth.py  config.py  http.py  lifespan.py  networking.py  tenant.py  trace.py  types.py
src/ninetrix/agent/: __init__.py  agent.py  config.py  introspection.py  server.py
src/ninetrix/checkpoint/: __init__.py  base.py  memory.py  postgres.py
src/ninetrix/client/: __init__.py  (+2 more)
tests/: test_agent.py  test_agent_context.py  test_auth.py  test_checkpoint.py  test_client.py  test_config.py  test_discovery.py  test_dispatcher.py  test_durable_workflow.py  test_errors.py  test_events_hooks.py  test_export.py  test_history_budget.py  test_http_lifespan.py  test_lifecycle.py  test_logger.py  test_mcp_composio.py  test_modular_e2e.py  test_networking.py  test_observability.py  test_openapi_source.py  test_otel.py  test_planner.py  test_postgres_checkpointer.py  test_providers.py  test_runner.py  test_streaming.py  test_team.py  test_telemetry.py  test_tenant.py  test_testing.py  test_toolkit.py  test_types.py  test_v2_api.py  test_workflow.py  usage_examples.py  usage_examples_v2.py
(+47 files in other folders)
