[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ninetrix-sdk"
version = "0.1.0"
description = "Python SDK for Ninetrix — define agent tools in code"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.27"]
openai = ["openai>=1.30"]
google = ["google-generativeai>=0.8"]
litellm = ["litellm>=1.40"]
providers = [
    "anthropic>=0.27",
    "openai>=1.30",
    "google-generativeai>=0.8",
    "litellm>=1.40",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://ninetrix.io"
Repository = "https://github.com/Ninetrix-ai/ninetrix"
Documentation = "https://ninetrix.io/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/ninetrix"]

[tool.hatch.build.targets.wheel.force-include]
"src/ninetrix/py.typed" = "ninetrix/py.typed"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/ninetrix"]
omit = ["tests/*"]
